added message to recruiters

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ And wealth is won at death’s own cost.<br>
                     <pre>
 Subject: Team Portfolio Submission for Evaluation
 
-Dear [Recruiter's Name],
+Dear Recruiter's,
 
 I hope this email finds you well. I am writing to submit our team's portfolio website for your review and consideration for the next round of the selection process.
 
@@ -378,15 +378,15 @@ Our portfolio showcases all the work we have completed so far, including:
 - Technical tasks: Code implementations and data visualizations
 - Creative tasks: Original poetry, AI-generated images, and AI-generated music
 
-You can access our portfolio at: [Insert Website URL Here]
+You can access our portfolio at: https://elfinbolt.github.io/team-egghead/
 
 We would greatly appreciate your evaluation of our work and look forward to the possibility of advancing to the next round.
 
 Thank you for your time and consideration.
 
 Best regards,
-[Your Team Name]
-[Contact Information]
+Team Egghead
+teamegghead007@gmail.com
                     </pre>
                 </div>
             </div>
